[package]
name = "dbr"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.32", features = ["rt-multi-thread", "macros", "time", "process", "signal"] }
anyhow = "1.0"
dialoguer = "0.11"
directories = "5.0"
log = "0.4"
env_logger = "0.10"
cron = "0.12"
comfy-table = "7.1"
simplelog = "0.12"
